Table customer {
  id int [PK]
  firstname text [not null]
  lastname text [not null]
  address text
  email text
  phone text
}

Table menu_head {
  id int [PK]
  menu_name text [not null]
}

Table menu_detail{
  id int [PK]
  size_dish text [not null]
  price real [not null]
  menu_id int [not null, ref: > menu_head.id]
}

Table payment_type {
  id int [PK]
  payment text [not null]
}

Table order_head {
  id int [PK]
  order_date date [not null]
  customer_id int [not null, ref: > customer.id]
  payment_id int [not null, ref: - payment_type.id]
}


Table order_detail {
  id int [PK]
  order_id int [not null, ref: > order_head.id]
  menu_detail_id int [not null,ref: - menu_detail.id]
  quantity int [not null]
}